# TK-Scripts

./: CHANGELOG.md  README.md  index.xml
.github/: copilot-instructions.md
.github/workflows/: build-tk-action-capture.yml  build-tk-native-helper.yml
Community/: sbp_Chord Voicing Editor (TK-edit).lua
Envelopes/: TK_ CopyAllEnvelopes.lua  TK_PasteAllEnvelopes.lua
FX/: TK_Add_ReVue_to_Tracks.lua  TK_Add_ReVue_to_Tracks_Chunk.lua  TK_Create_Tracks_with_ReVue.lua  TK_Create_Tracks_with_ReVue_Chunk.lua  TK_FX_BROWSER_Mini_TOGGLE_VISIBILITY.lua  TK_FX_BROWSER_SHOW_WINDOW.lua  TK_FX_BROWSER_TOGGLE_BOTH.lua  TK_FX_BROWSER_TOGGLE_VISIBILITY.lua  TK_Native_FX_Browser_Redirect.lua  TK_Native_FX_Browser_Redirect_Settings.lua  TK_Paranormal_Bridge.lua
FX/TK FX BORWSER/: TK_FX_BROWSER.lua
FX/TK FX BROWSER/: DrawMeter.lua  Sexan_FX_Browser.lua  TKFXBPatchbay.lua  TKFXBPatchbay_Standalone.lua  TKFXBVariables.lua  TK_FX_BROWSER Mini.lua  TK_FX_BROWSER copy.lua  TK_FX_BROWSER.lua  TK_FX_BROWSER_SnapshotFX.lua  TK_FX_BROWSER_TOGGLE_SCREENSHOT_WINDOW.lua  TK_NOTES.lua  TK_Patchbay_Standalone.lua  TK_fonttest.lua  config.json  index.xml
FX/TK FX SLOT PICKERS/: TK_Replace_Focused_Slot_On_Selected_Tracks_Picker.lua  TK_Replace_Slot_On_Tracks_Picker.lua
FX/TK FX SLOTS MANAGER/: TK_FX_Slots_Manager.lua  TK_FX_Slots_SingleTrack.lua  TK_Slot_Machine.lua
FX/TK FX Tabs/: TK_FX_Tabs.lua  TK_FX_Tabs_ZOrder_Test.lua
FX/TK Instrument Tabs/: TK_Instrument_Tabs.lua
JSFX/: TK_Blank_NoOp.jsfx
Media/: TK_MEDIA_BROWSER(SA).lua  TK_MediaExplorer.html  TK_MediaExplorer_WebBridge.lua  TK_MediaExplorer_WebBridge_CrossPlatform.lua  ai_sample_module.lua  tk_filename_categorizer.lua
Media/SAMPLE_ANALYZER/: QUICKSTART.txt  Start Sample Analyzer.vbs  TK_Sample_Analyzer_GUI.pyw  analyze_samples.py  requirements.txt
Midi/: ChordVoicings.txt  ChordVoicings_DoReMi.txt  TK_Chord_Progression_Generator.lua  TK_Find Similar MIDI Items (CORE).lua  TK_Find Similar MIDI Items.lua  TK_GTR2MIDI(EXPERIMENTAL).lua  TK_GTR2MIDI.lua  TK_GTR2MIDI_ChordEngine.lua
Midi/TK_ChordGun/: README.md  Reset_TK_ChordGun_Settings.lua  TK_ChordGun decrement chord inversion.lua  TK_ChordGun decrement chord type.lua  TK_ChordGun decrement octave.lua  TK_ChordGun decrement scale tonic note.lua  TK_ChordGun decrement scale type.lua  TK_ChordGun double grid size.lua  TK_ChordGun halve grid size.lua  TK_ChordGun higher scale note 1.lua  TK_ChordGun higher scale note 10.lua  TK_ChordGun higher scale note 2.lua  TK_ChordGun higher scale note 3.lua  TK_ChordGun higher scale note 4.lua  TK_ChordGun higher scale note 5.lua  TK_ChordGun higher scale note 6.lua  TK_ChordGun higher scale note 7.lua  TK_ChordGun higher scale note 8.lua  TK_ChordGun higher scale note 9.lua  TK_ChordGun increment chord inversion.lua  TK_ChordGun increment chord type.lua  TK_ChordGun increment octave.lua  TK_ChordGun increment scale tonic note.lua  TK_ChordGun increment scale type.lua  TK_ChordGun lower scale note 1.lua  TK_ChordGun lower scale note 10.lua  TK_ChordGun lower scale note 2.lua  TK_ChordGun lower scale note 3.lua  TK_ChordGun lower scale note 4.lua  TK_ChordGun lower scale note 5.lua  TK_ChordGun scale chord 1.lua  (+30 more)
Midi/TK_ChordGun copy/: TK_Scale_Filter.jsfx
Mixer/: TK_ChannelStrip.jsfx  TK_MCP_Cables_Overlay.lua  TK_MCP_Cables_Overlay_Toggle_Settings.lua  TK_MCP_Cables_Toggle_Selected_Only.lua  TK_Mixer.lua  TK_Trim.jsfx  TK_VU_Meter.jsfx  icon_browser.lua
Requests/: TK_Play_And_Stop_MediaExplorer.lua
TK Kit Maker/: TK_Kit_Maker.lua
TK Native/TKNativeHelper/: CMakeLists.txt  CMakePresets.json  README.md  build_and_install.ps1
TK Native/TKNativeHelper/src/: tk_native_helper.cpp  tk_native_helper.h  tk_native_helper_mac.mm  tk_native_helper_x11.cpp
TK SMART/: TK_Action_Browser.lua  TK_Learn_Browser(MR).lua  TK_Marker_Region_Action_Browser.lua  TK_SMART.lua  TK_marker at middle items on the track.lua  TK_marker at start items on the track.lua  weblinks.txt
TK Workbench/: TK_Instrument_Rack_Horizontal.lua  TK_Workbench.lua  TK_Workbench_2.lua
TK Workbench/Native/TKActionCapture/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
TK Workbench/Native/TKActionCapture/src/: tk_action_capture.cpp
Tools/: TK_AIM.lua  TK_Hide Item Buttons.lua  TK_IndestructibleTrack.lua  TK_IndestructibleTrack_Toggle_Profile1.lua  TK_IndestructibleTrack_Toggle_Profile2.lua  TK_IndestructibleTrack_Toggle_Profile3.lua  TK_IndestructibleTrack_Toggle_Profile4.lua  TK_Item gridlines.lua  TK_Play_And_Stop_MediaExplorer.lua  TK_Preset_Browser.lua  TK_RAW_audio editor.lua  TK_RAW_fx browser.lua  TK_REAPER_Screenshot.lua  TK_Timeselect_Loop_Color.lua  TK_UndoTree.lua  TK_time selection loop color.lua  TK_time selection loop color_setup.lua  VigiLiens.lua
Track/: TK_Add_Send_To_Selected_Tracks.lua  TK_Arrange_Background_Presets.lua  TK_Paint_Layer.lua  TK_Set selected MIDI item TrackMonitor.lua  TK_Set selected MIDI item shape and view.lua  TK_Set_SelectedItem_TrackMonitor.lua  TK_Set_SelectedItem_to_View_or_Shape.lua  TK_Trackname_DarkParentToggle.lua  TK_Trackname_Debug_Visibility.lua  TK_Trackname_Labels_Toggle.lua  TK_Trackname_Overlay_Toggle.lua  TK_Trackname_Settings_Toggle.lua  TK_Trackname_Toggle_Child.lua  TK_Trackname_Toggle_Child_Normal.lua  TK_Trackname_Toggle_Normal.lua  TK_Trackname_Toggle_Parent.lua  TK_Trackname_Toggle_Parent_Child.lua  TK_Trackname_Toggle_Parent_Normal.lua  TK_Trackname_in_Arrange.lua  paint_json.lua  track_icon_browser.lua  track_icon_manager.lua
Transport/: TK_MIXER_ONLY.lua  TK_TRANSPORT.lua  TK_Widget_CursorPosition.lua  TK_Widget_FXSearch.lua  TK_Widget_Handler.lua  TK_Widget_Manager.lua  TK_Widget_Metronome.lua  TK_Widget_PlayRate.lua  TK_Widget_TapTempo.lua  TK_Widget_Tempo.lua  TK_Widget_TimeSelection.lua  TK_Widget_Transport.lua  button_editor.lua  button_renderer.lua  custom_buttons.lua  icon_browser.lua  widget_manager.lua
(+115 files in other folders)
